# event-manager-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  2025_11_28_0844-eb5bd3b90022_initial_migration.py  2025_11_30_1038-84dcd2667f6b_add_default_admin_user.py  2025_11_30_1044-e4d68972415e_add_is_active_column_to_users.py  2025_11_30_1047-632acbd9f606_set_super_admin_active.py  2025_11_30_1101-2f78d6bdf1c8_add_colleges_table.py  2025_11_30_1143-96c41e8fc370_rename_email_to_username.py  2025_11_30_1233-c5d227b759f6_add_email_column_to_users.py  2025_11_30_1239-d80296832cc3_add_students_table.py  2025_12_01_1011-22a9a99475e8_add_timestamps_to_students.py  2025_12_01_1011-80c9fadf39db_add_timestamps_to_students.py  2025_12_01_1024-b0d8e72f839f_replace_full_name_with_first_last_name.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  colleges.py  events.py  registrations.py  users.py
